# agentica-python-sdk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: cla.yml
src/agentica/: __init__.py  __main__.py  agent.py  common.py  function.py  model_notices.py  template.py  version.py
src/agentica/agentica_client/: agentica_client.py  global_csm.py
src/agentica/client_session_manager/: __init__.py  at_exit.py  client_session_manager.py
src/agentica/coming_soon/: __init__.py  coming_soon.py
src/agentica/decorator/: __init__.py  decorator.py
src/agentica/demo/: chat_with.py  docs.md  pitch.md
src/agentica/errors/: __init__.py
src/agentica/flags/: __init__.py
src/agentica/logging/: __init__.py  agent_listener.py  agent_logger.py
src/agentica/logging/loggers/: __init__.py  file_logger.py  print_logger.py  standard_logger.py  stream_logger.py
src/agentica/platform/: __init__.py
src/agentica/sdk_logging/: __init__.py
src/agentica/std/: __init__.py  async_wrapper.py  caption.py  utils.py  web.py
src/agentica/unmcp/: __init__.py  mcp_function.py  sigs.py
test/: conftest.py  mcp_config.json  mcp_server.py  test_coming_soons.py  test_error_enrichment.py  test_unmcp.py  test_version.py
